--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
       integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
       crossorigin=""></script> -->
     <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
-  <script type="text/javascript" src="/bundle.js"></script></body>
+  <script type="text/javascript" src="/care-international/bundle.js"></script></body>
 </html>
