--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135004560-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
